@@ -24,6 +24,7 @@ sunuo (0.3.0) unstable; urgency=low
     - delocalize
     - oldschool
     - disable-tile-patch
+    - age-of-shadows, samurai-empire
   * support StringQuery
   * Config.MultiThreading renamed to Config.Features["multi-threading"]
   * moved config classes to namespace Server.Config
